1º portifolio com HTML e CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,7 @@ body {
     }
     .cabecalho_menu{
         justify-content: center;
+        gap:auto;
     }
     .container{
         flex-direction: column-reverse;
