1º portifolio com HTML e CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@ body {
     }
     .cabecalho_menu{
         justify-content: center;
-        gap:auto;
+        gap: 10px;
     }
     .container{
         flex-direction: column-reverse;
